# fastapi-simple-app-example

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: actions.py  config.py  db.py  main.py  models.py  schemas.py
app/db/: __init__.py  base.py  session.py
migrations/: env.py
migrations/versions/: ee48ba03fe9f_create_posts_table.py
